Worked on sprint board, organizations view. Some bugfixes.

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "react-bootstrap" : "latest",
     "sprintf" : "latest",
     "markdown" : "latest",
+    "marked" : "latest",
     "font-mfizz" : "latest",
     "octicons" : "latest"
   }
