--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,19 @@
   "name": "qc-react",
   "version": "0.0.1",
   "dependencies": {
-    "director": "~1.2.0",
-    "react": "~0.10.0",
-    "jquery": "~2.1.0",
-    "requirejs" : "~2.1.11",
+    "director": "1.2.2",
+    "react": "0.12.0",
+    "jquery": "2.1.1",
+    "requirejs" : "2.1.11",
     "momentjs" : "2.6.0",
-    "bootstrap" : "~3.1.1",
+    "bootstrap" : "3.1.1",
     "font-awesome" : "4.1.0",
-    "react-bootstrap" : "latest",
-    "sprintf" : "latest",
-    "markdown" : "latest",
-    "marked" : "latest",
-    "font-mfizz" : "latest",
-    "octicons" : "latest"
+    "react-bootstrap" : "0.13.0",
+    "sprintf" : "1.0.2",
+    "markdown" : "0.5.0",
+    "marked" : "",
+    "font-mfizz" : "2.0.0",
+    "octicons" : "latest",
+    "requirejs" : "2.1.14"
   }
 }
