Fixed various bugs, added Makefile.

--- a/bower.json
+++ b/bower.json
@@ -6,13 +6,14 @@
     "react": "0.12.0",
     "jquery": "2.1.1",
     "requirejs" : "2.1.11",
+    "bootstrap-material-design": "latest",
     "momentjs" : "2.6.0",
-    "bootstrap" : "3.1.1",
+    "bootstrap" : "latest",
     "font-awesome" : "4.1.0",
     "react-bootstrap" : "0.13.0",
     "sprintf" : "1.0.2",
     "markdown" : "0.5.0",
-    "marked" : "",
+    "marked" : "0.3.3",
     "font-mfizz" : "2.0.0",
     "octicons" : "latest",
     "requirejs" : "2.1.14"
